# ohos_mini_system

./: .gitignore  README.md
component_demo/: BUILD.gn  demo.c
wifi-iot/app/: BUILD.gn
wifi-iot/app/adc_demo/: BUILD.gn  adc_sensor_demo.c  dht11.c  dht11.h  dht11_demo.c
wifi-iot/app/file_demo/: BUILD.gn  demo.c
wifi-iot/app/gn_practice/application/: BUILD.gn  app_main.c  component_1.c  component_2.c
wifi-iot/app/gn_practice/driver/: BUILD.gn  drv_1.c
wifi-iot/app/gpio_demo/: BUILD.gn  gpio_input_demo.c  gpio_interrupt_demo.c  gpio_output_demo.c  gpio_pwm_demo.c
wifi-iot/app/kv_store_demo/: BUILD.gn  demo.c
wifi-iot/app/mqtt_demo/: BUILD.gn  mqtt_demo.c  mqtt_task.c  mqtt_task.h
wifi-iot/app/mutex_demo/: BUILD.gn  mutex_demo.c
wifi-iot/app/my_first_app/: BUILD.gn  hello_world.c
wifi-iot/app/oled_demo/: BUILD.gn  oled.c  oled.h  oled_demo.c  oled_fonts.h
wifi-iot/app/tcp_client/: BUILD.gn  demo.c  tcp_client.c  tcp_client.h
wifi-iot/app/tcp_server/: BUILD.gn  demo.c  tcp_server.c  tcp_server.h
wifi-iot/app/thread_demo/: BUILD.gn  thread_basic.c
wifi-iot/app/timer_demo/: BUILD.gn  timer_basic.c
wifi-iot/app/uart_demo/: BUILD.gn  uart_demo.c
wifi-iot/app/udp_client/: BUILD.gn  demo.c  udp_client.c  udp_client.h
wifi-iot/app/udp_server/: BUILD.gn  demo.c  udp_server.c  udp_server.h
wifi-iot/app/wifi_demo/: BUILD.gn  wifi_connect_demo.c  wifi_hotspot_demo.c  wifi_scan_demo.c
